fix overflow

--- a/src/components/ApplicationDashboard/application-dashboard.module.scss
+++ b/src/components/ApplicationDashboard/application-dashboard.module.scss
@@ -4,16 +4,16 @@
     padding: 30px 20px;
     font-size: 18px;
     background: var(--main-bg-color);
+  }
 
+  &__withdraw {
     &__header {
       color: white;
       font-size: 1.1em;
       font-weight: 500;
       margin-bottom: 20px;
     }
-  }
 
-  &__withdraw {
     &__info {
       margin-top: 20px;
       background: var(--light-bg-color);
@@ -65,6 +65,12 @@
   }
 
   &__deposits {
+    &__header {
+      color: white;
+      font-size: 1.1em;
+      font-weight: 500;
+      margin-bottom: 20px;
+    }
 
     &__info {
       background: var(--light-bg-color);
